--- a/webJeans_re/index.html
+++ b/webJeans_re/index.html
@@ -2,13 +2,10 @@
 <html>
 <head>
     <link rel="stylesheet" href="./css/index.css">
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
     <title>메인</title>
 </head>
-
-<script>
-    const urlParams = new URLSearchParams(window.location.search);
-    const user_name = urlParams.get('user_name');
-</script>
 
 <body>
 
@@ -50,6 +47,53 @@
       <button type="botton" class="btn" style="top: 500px; left: 1250px;" onClick="location.href='hobby_school.html?user_name=' + user_name">
         <img src="./img/school_icon.png" class="imgsize" alt="취미 학교" />
       </button>
+
+      <!------------------------- 챗봇 강아지 ------------------------->
+      <button type="botton" class="btn" style="top: 850px; left: 50px; display: flex;" onClick="location.href='chatbot.html?user_name=' + user_name">
+        <img src="./img/help_doggie.png" style="height: 180px; width: 180px;" alt="챗봇 안내 도우미" />
+        <span id="doggieDisplay"> 챗봇 누렁이 </span>
+      </button>
   
+
+
+    <script>
+      const urlParams = new URLSearchParams(window.location.search);
+      const user_name = urlParams.get('user_name');
+
+      const firebaseConfig = {
+      apiKey: "AIzaSyD5OBSUvXY-Yd_eBUsBWnNG8hltOZFXazE",
+      authDomain: "webjeans-f0f95.firebaseapp.com",
+      databaseURL: "https://webjeans-f0f95-default-rtdb.firebaseio.com",
+      projectId: "webjeans-f0f95",
+      storageBucket: "webjeans-f0f95.appspot.com",
+      messagingSenderId: "334680708380",
+      appId: "1:334680708380:web:35d36575bf793088e396d9",
+      measurementId: "G-DXDNFGKM7T"
+      };
+
+      // Firebase 초기화
+      firebase.initializeApp(firebaseConfig);
+      const db = firebase.database();
+
+      db.ref('users').orderByChild("name").equalTo(user_name).once('value')
+          .then(function(snapshot) {
+              snapshot.forEach(function(childSnapshot) {
+                  var data = childSnapshot.val();
+
+                  // doggie 데이터가 없을 때 이전 텍스트를 유지
+                  if (data.doggie === undefined) {
+                      return;
+                  }
+
+                  document.getElementById('doggieDisplay').innerText = data.doggie;
+              });
+          })
+          .catch(function(error) {
+              console.error("데이터 조회 오류:", error);
+          });   
+
+
+    </script>
+
 </body>
 </html>
