청바지 작품 코드

--- a/webJeans_re/sign_up.html
+++ b/webJeans_re/sign_up.html
@@ -7,7 +7,7 @@
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-storage.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
-  <link rel="stylesheet" href="./css/messenger.css">
+  <link rel="stylesheet" href="./css/sign_up.css">
   <title>회원가입  - 얼굴 등록</title>
 
 
@@ -91,6 +91,8 @@
     <!--<input type="submit" value="회원가입" id="submitButton"/>-->
 
   </div>
+
+  <script src="./src/sign_up.js"> </script>
 
 </body>
 </html>
